--- a/package.json
+++ b/package.json
@@ -1,1 +1,51 @@
-{"dependencies":{"core-js":"^3.36.1","webpack-license-plugin":"^4.4.2"},"scripts":{"start":"webpack serve --config webpack.dev.js","build":"webpack --config webpack.prod.js","lint":"eslint . --fix","coverage":"jest --env=jsdom --coverage --passWithNoTests","preshow:coverage":"npm run coverage","show:coverage":"live-server coverage/lcov-report","preshow:dist":"npm run build","show:dist":"live-server dist"},"name":"ahj-hw_anim","version":"1.0.0","main":"index.js","repository":{"type":"git","url":"git+https://github.com/Shlaginau/ahj-hw_anim.git"},"author":"shlaginau","license":"ISC","devDependencies":{"@babel/cli":"^7.24.1","@babel/core":"^7.24.4","@babel/preset-env":"^7.24.4","babel-jest":"^29.7.0","babel-loader":"^9.1.3","css-loader":"^7.1.1","css-minimizer-webpack-plugin":"^7.0.0","eslint":"^8.57.0","eslint-config-airbnb-base":"^15.0.0","eslint-plugin-import":"^2.29.1","html-loader":"^5.0.0","html-webpack-plugin":"^5.6.0","jest":"^29.7.0","jest-environment-jsdom":"^29.7.0","mini-css-extract-plugin":"^2.8.1","webpack":"^5.91.0","webpack-cli":"^5.1.4","webpack-dev-server":"^5.0.4","y":"^0.3.2"},"bugs":{"url":"https://github.com/Shlaginau/ahj-hw_anim/issues"},"homepage":"https://github.com/Shlaginau/ahj-hw_anim#readme"}
+{
+  "dependencies": {
+    "core-js": "^3.36.1",
+    "webpack-license-plugin": "^4.4.2"
+  },
+  "scripts": {
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "lint": "eslint . --fix",
+    "coverage": "jest --env=jsdom --coverage --passWithNoTests",
+    "preshow:coverage": "npm run coverage",
+    "show:coverage": "live-server coverage/lcov-report",
+    "preshow:dist": "npm run build",
+    "show:dist": "live-server dist"
+  },
+  "name": "ahj-hw_anim",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shlaginau/ahj-hw_anim.git"
+  },
+  "author": "shlaginau",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.1",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "mini-css-extract-plugin": "^2.8.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "y": "^0.3.2"
+  },
+  "bugs": {
+    "url": "https://github.com/Shlaginau/ahj-hw_anim/issues"
+  },
+  "homepage": "https://github.com/Shlaginau/ahj-hw_anim#readme",
+  "description": "Правила сдачи задания:"
+}
